Bug 1824084: use linux codepaths for BSDs in uptime-related functions r=padenot

should unbreak telemetry for BSDs and Solaris.

In NowExcludingSuspendMs() use CLOCK_UPTIME instead of CLOCK_MONOTONIC on
OpenBSD as this one excludes time spent suspended.

Differential Revision: https://phabricator.services.mozilla.com/D173625