mozglue/misc/Uptime.cpp
@@ -75,7 +75,7 @@ Maybe<uint64_t> NowIncludingSuspendMs() {
   return Some(interrupt_time / kHNSperMS);
 }
 
-#elif defined(XP_LINUX)  // including Android
+#elif defined(XP_UNIX)  // including BSDs and Android
 #  include <time.h>
 
 // Number of nanoseconds in a millisecond.
@@ -88,7 +88,11 @@ uint64_t TimespecToMilliseconds(struct timespec aTs) {
 Maybe<uint64_t> NowExcludingSuspendMs() {
   struct timespec ts = {0};
 
+#  ifdef XP_OPENBSD
+  if (clock_gettime(CLOCK_UPTIME, &ts)) {
+#  else
   if (clock_gettime(CLOCK_MONOTONIC, &ts)) {
+#  endif
     return Nothing();
   }
   return Some(TimespecToMilliseconds(ts));
